# model/request.go
@@ -1,8 +1,8 @@
 package model
 
 type LoginRequest struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=5"`
 }
 
 type RegisterRequest struct {
